--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.6.4",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.1.13",
