--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,6 +30,8 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^4.1.0",
+    "elevenlabs": "^0.16.1",
+    "elevenlabs-js": "^1.2.6",
     "mongoose": "^8.6.4",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.1.13",
