--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.29.0",
     "@google-cloud/speech": "^6.7.0",
     "@google-cloud/vertexai": "^1.8.1",
     "@nestjs/common": "^10.0.0",
