--- a/turbo.json
+++ b/turbo.json
@@ -2,15 +2,18 @@
     "$schema": "https://turbo.build/schema.json",
     "tasks": {
       "dev": {
-          "cache": false
+        "cache": false,
+        "dependsOn": ["server:dev"]
       },
       "build": {
-            "dependsOn": [
-                "^build"
-            ], 
-            "outputs": [
-                "dist/**"
-            ]
-        }
+        "dependsOn": ["^build"],
+        "outputs": ["dist/**"]
+      },
+      "server:dev": { 
+        "dependsOn": [],
+        "cache": false,
+        "outputs": ["apps/server/dist/**"]
+      }
     }
   }
+  
