--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -33,3 +33,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#gcp json
+application_default_credentials.json
