--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,6 +40,7 @@
     "elevenlabs": "^0.16.1",
     "elevenlabs-js": "^1.2.6",
     "google-protobuf": "^3.21.4",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.6.4",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.1.13",
@@ -53,6 +54,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
+    "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
