--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -52,6 +52,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/google-protobuf": "^3.15.12",
