--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,5 +1,5 @@
 # Node.js 20 기반 이미지 사용
-FROM node:lts AS build
+FROM node:lts-alpine AS build
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -16,8 +16,8 @@ COPY . .
 # 빌드 실행
 RUN npm run build
 
-# 실행 권한 부여
-RUN chmod +x ./dist/main.js
+# # 실행 권한 부여
+# RUN chmod +x ./dist/main.js
 
 # 포트 설정
 EXPOSE 3050
