--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -15,6 +15,9 @@ RUN npm ci
 # server 코드 복사
 COPY . .
 
+RUN NODE_OPTIONS="--max-old-space-size=4096" npm run build
+
+
 # 빌드 실행
 RUN npm run build
 
