--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,5 @@ jobs: # Workflow에서 실행할 작업(job)들을 정의합니다.
             cd /home/ubuntu/DoRun-DoRun-nest.js # 작업 디렉토리를 변경합니다.
             git pull origin main --force
             sudo docker-compose pull
-            sudo docker-compose up -d --remove-orphans # 컨테이너를 detached 모드로 실행합니다. --remove-orphans 옵션은 docker-compose 파일에서 제거된 컨테이너를 삭제합니다.
+            sudo docker-compose up --build -d --remove-orphans
+
