--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,8 @@ jobs: # Workflow에서 실행할 작업(job)들을 정의합니다.
       - name: Set up Docker Buildx # Docker Buildx를 설정하는 단계입니다. 멀티 아키텍처 빌드를 지원합니다.
         uses: docker/setup-buildx-action@v2 # Docker Buildx 액션을 사용합니다.
 
-        
+      - name: Copy GCP Credentials File
+        run: cp /home/ubuntu/.config/gcloud/application_default_credentials.json ./application_default_credentials.json
 
       - name: Deploy to Server via SSH # 서버에 배포하는 단계입니다.
         uses: appleboy/ssh-action@v0.1.7  # SSH 접속 액션을 사용합니다.
@@ -27,4 +28,3 @@ jobs: # Workflow에서 실행할 작업(job)들을 정의합니다.
             git pull origin main --force
             sudo docker-compose pull
             sudo docker-compose up --build -d --remove-orphans
-
