--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs: # Workflow에서 실행할 작업(job)들을 정의합니다.
         uses: docker/setup-buildx-action@v2 # Docker Buildx 액션을 사용합니다.
 
       - name: Copy GCP Credentials File
-        run: cp .config/gcloud/application_default_credentials.json ./application_default_credentials.json
+        run: echo "${{ secrets.GCP_CREDENTIALS }}" > ./application_default_credentials.json
 
       - name: Deploy to Server via SSH # 서버에 배포하는 단계입니다.
         uses: appleboy/ssh-action@v0.1.7  # SSH 접속 액션을 사용합니다.
