구글 인증 파일 저장 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,6 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /home/ubuntu/DoRun-DoRun-nest.js
-            git pull origin main --force
-            sudo mv ./application_default_credentials.json /run/secrets/application_default_credentials.json
+            git pull origin main
             sudo docker-compose pull
             sudo docker-compose up --build -d --remove-orphans
