--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -5,6 +5,11 @@ WORKDIR /app
 
 COPY package*.json ./
 
+COPY application_default_credentials.json /app/application_default_credentials.json
+
+# 환경 변수 설정
+ENV GOOGLE_APPLICATION_CREDENTIALS="/app/application_default_credentials.json"
+
 RUN npm i
 
 # 의존성 설치
@@ -15,8 +20,5 @@ COPY . .
 RUN NODE_OPTIONS="--max-old-space-size=4096" npm run build
 
 EXPOSE 3050
-
-# Google Cloud SDK 및 인증 파일 환경변수 설정
-ENV GOOGLE_APPLICATION_CREDENTIALS="/run/secrets/application_default_credentials.json"
 
 CMD ["node", "--max-old-space-size=512", "./dist/main.js"]
