--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Copy GCP Credentials File
-        run: echo "${{ secrets.GCP_CREDENTIALS }}" > ./application_default_credentials.json
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+  
+      - name: Set up GOOGLE_APPLICATION_CREDENTIALS
+        run: echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp-key.json
+  
+      - name: Deploy to GCP
+        run: |
+          export GOOGLE_APPLICATION_CREDENTIALS="/tmp/gcp-key.json"
 
       - name: Deploy to Server via SSH
         uses: appleboy/ssh-action@v0.1.7
